syntax = "proto3";

option csharp_namespace = "ApiGateway.Proto";

service RpcServer {
     rpc GetData (DataRequest) returns (DataResponse);
   }

   message DataRequest {
     string redirectUrl = 1;
     string searchedString = 3;
   }

   message DataResponse {
     string status = 1;
   }